--- a/web/src/index.css
+++ b/web/src/index.css
@@ -65,7 +65,7 @@
   --card-foreground: oklch(92.876% 0.01272 255.643);
   --popover: oklch(0.2603 0 0);
   --popover-foreground: oklch(0.7348 0 0);
-  --primary: oklch(0.4365 0.1044 156.7556);
+  --primary: #006239;
   --primary-foreground: oklch(0.9213 0.0135 167.1556);
   --secondary: oklch(0.2603 0 0);
   --secondary-foreground: oklch(0.9851 0 0);
